--- a/packages/engine/paima-rest/package.json
+++ b/packages/engine/paima-rest/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "express": "^4.18.1",
     "yaml": "^2.3.1",
-    "tsoa": "^5.1.1"
+    "tsoa": "^6.0.0-rc.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
