--- a/packages/engine/paima-rest/tsconfig.json
+++ b/packages/engine/paima-rest/tsconfig.json
@@ -4,7 +4,10 @@
     "rootDir": ".",
     "noEmit": true
   },
-  "include": ["src/**/*", "test/**/*"],
+  "include": ["src/**/*", "test/**/*", "src/**/*.json"],
   "references": [
+    { "path": "../../paima-sdk/paima-utils/tsconfig.build.json" },
+    { "path": "../../node-sdk/paima-db" },
+    { "path": "../paima-sm" },
   ]
 }
