--- a/packages/engine/paima-runtime/tsconfig.json
+++ b/packages/engine/paima-runtime/tsconfig.json
@@ -8,5 +8,7 @@
   "references": [
     { "path": "../../paima-sdk/paima-utils/tsconfig.build.json" },
     { "path": "../../node-sdk/paima-db" },
+    { "path": "../paima-rest/tsconfig.build.json" },
+    { "path": "../paima-sm" },
   ]
 }
