--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -6,6 +6,7 @@
     "module": "ESNext",
     "moduleResolution": "node",
     "baseUrl": "./",
+    "experimentalDecorators": true /* Enable experimental support for TC39 stage 2 draft decorators. */,
     "resolveJsonModule": true,
     "declaration": true,
     "preserveConstEnums": true,
