--- a/packages/batcher/address-validator/package.json
+++ b/packages/batcher/address-validator/package.json
@@ -13,7 +13,7 @@
     "pg": "^8.7.3",
     "web3": "1.10.0",
     "assert-never": "^1.2.1",
-    "@dcspark/carp-client": "../../../tmp-carp-client"
+    "@dcspark/carp-client": "^2.3.0"
   },
   "devDependencies": {
     "@types/pg": "^8.6.5"
