--- a/packages/engine/paima-funnel/package.json
+++ b/packages/engine/paima-funnel/package.json
@@ -18,6 +18,6 @@
   },
   "dependencies": {
     "assert-never": "^1.2.1",
-    "@dcspark/carp-client": "../../../tmp-carp-client"
+    "@dcspark/carp-client": "^2.3.0"
   }
 }
